--- a/Products.css
+++ b/Products.css
@@ -1,5 +1,5 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 552px;
+  min-height: 640px;
 }
 
 .u-section-1 .u-list-1 {
@@ -14,11 +14,11 @@
 }
 
 .u-section-1 .u-container-layout-1 {
-  padding: 20px 30px 20px 37px;
+  padding: 20px 30px;
 }
 
 .u-section-1 .u-image-1 {
-  height: 256px;
+  height: 300px;
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -35,20 +35,20 @@
 .u-section-1 .u-btn-1 {
   font-size: 1rem;
   letter-spacing: 1px;
-  border-style: solid;
+  border-style: none none solid;
   text-transform: uppercase;
   background-image: none;
   font-weight: 700;
   margin: 20px auto 0 0;
-  padding: 2px 16px 3px 15px;
+  padding: 2px 14px 2px 13px;
 }
 
 .u-section-1 .u-container-layout-2 {
-  padding: 20px 30px 20px 37px;
+  padding: 20px 30px;
 }
 
 .u-section-1 .u-image-2 {
-  height: 256px;
+  height: 300px;
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -65,20 +65,20 @@
 .u-section-1 .u-btn-2 {
   font-size: 1rem;
   letter-spacing: 1px;
-  border-style: solid;
+  border-style: none none solid;
   text-transform: uppercase;
   background-image: none;
   font-weight: 700;
   margin: 20px auto 0 0;
-  padding: 2px 16px 3px 15px;
+  padding: 2px 14px 2px 13px;
 }
 
 .u-section-1 .u-container-layout-3 {
-  padding: 20px 30px 20px 37px;
+  padding: 20px 30px;
 }
 
 .u-section-1 .u-image-3 {
-  height: 256px;
+  height: 300px;
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -95,12 +95,12 @@
 .u-section-1 .u-btn-3 {
   font-size: 1rem;
   letter-spacing: 1px;
-  border-style: solid;
+  border-style: none none solid;
   text-transform: uppercase;
   background-image: none;
   font-weight: 700;
   margin: 20px auto 0 0;
-  padding: 2px 16px 3px 15px;
+  padding: 2px 14px 2px 13px;
 }
 
 @media (max-width: 1199px) {
@@ -115,15 +115,15 @@
   }
 
   .u-section-1 .u-image-1 {
-    height: 202px;
+    height: 237px;
   }
 
   .u-section-1 .u-image-2 {
-    height: 202px;
+    height: 237px;
   }
 
   .u-section-1 .u-image-3 {
-    height: 202px;
+    height: 237px;
   }
 }
 
@@ -133,28 +133,16 @@
     min-height: 710px;
   }
 
-  .u-section-1 .u-container-layout-1 {
-    padding-left: 30px;
-  }
-
   .u-section-1 .u-image-1 {
-    height: 246px;
-  }
-
-  .u-section-1 .u-container-layout-2 {
-    padding-left: 30px;
+    height: 281px;
   }
 
   .u-section-1 .u-image-2 {
-    height: 246px;
-  }
-
-  .u-section-1 .u-container-layout-3 {
-    padding-left: 30px;
+    height: 281px;
   }
 
   .u-section-1 .u-image-3 {
-    height: 246px;
+    height: 281px;
   }
 }
 
@@ -169,7 +157,7 @@
   }
 
   .u-section-1 .u-image-1 {
-    height: 426px;
+    height: 487px;
   }
 
   .u-section-1 .u-container-layout-2 {
@@ -178,7 +166,7 @@
   }
 
   .u-section-1 .u-image-2 {
-    height: 426px;
+    height: 487px;
   }
 
   .u-section-1 .u-container-layout-3 {
@@ -187,20 +175,190 @@
   }
 
   .u-section-1 .u-image-3 {
-    height: 426px;
+    height: 487px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-image-1 {
-    height: 262px;
+    height: 300px;
   }
 
   .u-section-1 .u-image-2 {
-    height: 262px;
+    height: 300px;
   }
 
   .u-section-1 .u-image-3 {
-    height: 262px;
+    height: 300px;
+  }
+}.u-section-2 .u-sheet-1 {
+  min-height: 552px;
+}
+
+.u-section-2 .u-list-1 {
+  grid-template-rows: auto;
+  margin: 50px 0;
+}
+
+.u-section-2 .u-repeater-1 {
+  grid-template-columns: repeat(3, 33.3333%);
+  min-height: 375px;
+  grid-gap: 0px;
+}
+
+.u-section-2 .u-container-layout-1 {
+  padding: 19px 20px;
+}
+
+.u-section-2 .u-image-1 {
+  height: 313px;
+  width: 320px;
+  margin: 11px 0 0 auto;
+}
+
+.u-section-2 .u-text-1 {
+  font-weight: 700;
+  margin: 10px auto 0 10px;
+}
+
+.u-section-2 .u-text-2 {
+  margin: 20px 10px 0;
+}
+
+.u-section-2 .u-btn-1 {
+  font-size: 1rem;
+  letter-spacing: 1px;
+  border-style: none none solid;
+  text-transform: uppercase;
+  background-image: none;
+  font-weight: 700;
+  margin: 20px auto 0 10px;
+  padding: 2px 10px 3px;
+}
+
+.u-section-2 .u-container-layout-2 {
+  padding: 19px 20px;
+}
+
+.u-section-2 .u-image-2 {
+  height: 313px;
+  width: 320px;
+  margin: 11px 0 0 auto;
+}
+
+.u-section-2 .u-text-3 {
+  font-weight: 700;
+  margin: 10px auto 0 10px;
+}
+
+.u-section-2 .u-text-4 {
+  margin: 20px 10px 0;
+}
+
+.u-section-2 .u-btn-2 {
+  font-size: 1rem;
+  letter-spacing: 1px;
+  border-style: none none solid;
+  text-transform: uppercase;
+  background-image: none;
+  font-weight: 700;
+  margin: 20px auto 0 10px;
+  padding: 2px 10px 3px;
+}
+
+.u-section-2 .u-container-layout-3 {
+  padding: 19px 20px;
+}
+
+.u-section-2 .u-image-3 {
+  height: 313px;
+  width: 320px;
+  margin: 11px 0 0 auto;
+}
+
+.u-section-2 .u-text-5 {
+  font-weight: 700;
+  margin: 10px auto 0 10px;
+}
+
+.u-section-2 .u-text-6 {
+  margin: 20px 10px 0;
+}
+
+.u-section-2 .u-btn-3 {
+  font-size: 1rem;
+  letter-spacing: 1px;
+  border-style: none none solid;
+  text-transform: uppercase;
+  background-image: none;
+  font-weight: 700;
+  margin: 20px auto 0 10px;
+  padding: 2px 10px 3px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-2 .u-list-1 {
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-2 .u-repeater-1 {
+    grid-template-columns: repeat(3, 33.333333333333336%);
+    min-height: 309px;
+  }
+
+  .u-section-2 .u-text-2 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-btn-1 {
+    margin-left: 0;
+  }
+
+  .u-section-2 .u-text-4 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-btn-2 {
+    margin-left: 0;
+  }
+
+  .u-section-2 .u-text-6 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-btn-3 {
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-2 .u-repeater-1 {
+    grid-template-columns: repeat(2, 50%);
+    min-height: 710px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-2 .u-repeater-1 {
+    grid-template-columns: 100%;
+  }
+
+  .u-section-2 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-container-layout-3 {
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
