--- a/Toys.css
+++ b/Toys.css
@@ -219,11 +219,11 @@
 }
 
 .u-section-2 .u-container-layout-1 {
-  padding: 20px 30px;
+  padding: 20px 30px 20px 37px;
 }
 
 .u-section-2 .u-image-1 {
-  height: 307px;
+  height: 256px;
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -242,18 +242,18 @@
   letter-spacing: 1px;
   border-style: solid;
   text-transform: uppercase;
-  font-weight: 700;
   background-image: none;
+  font-weight: 700;
   margin: 20px auto 0 0;
-  padding: 2px 20px 2px 18px;
+  padding: 2px 16px 3px 15px;
 }
 
 .u-section-2 .u-container-layout-2 {
-  padding: 20px 30px;
+  padding: 20px 30px 20px 37px;
 }
 
 .u-section-2 .u-image-2 {
-  height: 307px;
+  height: 256px;
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -272,18 +272,18 @@
   letter-spacing: 1px;
   border-style: solid;
   text-transform: uppercase;
-  font-weight: 700;
   background-image: none;
+  font-weight: 700;
   margin: 20px auto 0 0;
-  padding: 2px 20px 2px 18px;
+  padding: 2px 16px 3px 15px;
 }
 
 .u-section-2 .u-container-layout-3 {
-  padding: 20px 30px;
+  padding: 20px 30px 20px 37px;
 }
 
 .u-section-2 .u-image-3 {
-  height: 307px;
+  height: 256px;
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -302,10 +302,10 @@
   letter-spacing: 1px;
   border-style: solid;
   text-transform: uppercase;
-  font-weight: 700;
   background-image: none;
+  font-weight: 700;
   margin: 20px auto 0 0;
-  padding: 2px 20px 2px 18px;
+  padding: 2px 16px 3px 15px;
 }
 
 @media (max-width: 1199px) {
@@ -320,15 +320,15 @@
   }
 
   .u-section-2 .u-image-1 {
-    height: 221px;
+    height: 202px;
   }
 
   .u-section-2 .u-image-2 {
-    height: 221px;
+    height: 202px;
   }
 
   .u-section-2 .u-image-3 {
-    height: 221px;
+    height: 202px;
   }
 }
 
@@ -338,16 +338,28 @@
     min-height: 710px;
   }
 
+  .u-section-2 .u-container-layout-1 {
+    padding-left: 30px;
+  }
+
   .u-section-2 .u-image-1 {
-    height: 262px;
+    height: 246px;
+  }
+
+  .u-section-2 .u-container-layout-2 {
+    padding-left: 30px;
   }
 
   .u-section-2 .u-image-2 {
-    height: 262px;
+    height: 246px;
+  }
+
+  .u-section-2 .u-container-layout-3 {
+    padding-left: 30px;
   }
 
   .u-section-2 .u-image-3 {
-    height: 262px;
+    height: 246px;
   }
 }
 
@@ -362,7 +374,7 @@
   }
 
   .u-section-2 .u-image-1 {
-    height: 454px;
+    height: 426px;
   }
 
   .u-section-2 .u-container-layout-2 {
@@ -371,7 +383,7 @@
   }
 
   .u-section-2 .u-image-2 {
-    height: 454px;
+    height: 426px;
   }
 
   .u-section-2 .u-container-layout-3 {
@@ -380,21 +392,21 @@
   }
 
   .u-section-2 .u-image-3 {
-    height: 454px;
+    height: 426px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-2 .u-image-1 {
-    height: 279px;
+    height: 262px;
   }
 
   .u-section-2 .u-image-2 {
-    height: 279px;
+    height: 262px;
   }
 
   .u-section-2 .u-image-3 {
-    height: 279px;
+    height: 262px;
   }
 }.u-section-3 .u-sheet-1 {
   min-height: 552px;
@@ -412,21 +424,22 @@
 }
 
 .u-section-3 .u-container-layout-1 {
-  padding: 20px 23px;
+  padding: 20px 30px;
 }
 
 .u-section-3 .u-image-1 {
-  height: 250px;
-  width: 320px;
-  margin: 7px 0 0 auto;
+  height: 307px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .u-section-3 .u-text-1 {
-  margin: 13px auto 0 7px;
+  font-weight: 700;
+  margin: 20px auto 0 0;
 }
 
 .u-section-3 .u-text-2 {
-  margin: 20px 7px 0;
+  margin: 20px 0 0;
 }
 
 .u-section-3 .u-btn-1 {
@@ -434,28 +447,29 @@
   letter-spacing: 1px;
   border-style: solid;
   text-transform: uppercase;
-  background-image: none;
   font-weight: 700;
-  margin: 20px auto 0 7px;
-  padding: 8px 19px 8px 18px;
+  background-image: none;
+  margin: 20px auto 0 0;
+  padding: 2px 20px 2px 18px;
 }
 
 .u-section-3 .u-container-layout-2 {
-  padding: 20px 23px;
+  padding: 20px 30px;
 }
 
 .u-section-3 .u-image-2 {
-  height: 250px;
-  width: 320px;
-  margin: 7px 0 0 auto;
+  height: 307px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .u-section-3 .u-text-3 {
-  margin: 13px auto 0 7px;
+  font-weight: 700;
+  margin: 20px auto 0 0;
 }
 
 .u-section-3 .u-text-4 {
-  margin: 20px 7px 0;
+  margin: 20px 0 0;
 }
 
 .u-section-3 .u-btn-2 {
@@ -463,28 +477,29 @@
   letter-spacing: 1px;
   border-style: solid;
   text-transform: uppercase;
-  background-image: none;
   font-weight: 700;
-  margin: 20px auto 0 7px;
-  padding: 8px 19px 8px 18px;
+  background-image: none;
+  margin: 20px auto 0 0;
+  padding: 2px 20px 2px 18px;
 }
 
 .u-section-3 .u-container-layout-3 {
-  padding: 20px 23px;
+  padding: 20px 30px;
 }
 
 .u-section-3 .u-image-3 {
-  height: 250px;
-  width: 320px;
-  margin: 7px 0 0 auto;
+  height: 307px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .u-section-3 .u-text-5 {
-  margin: 13px auto 0 7px;
+  font-weight: 700;
+  margin: 20px auto 0 0;
 }
 
 .u-section-3 .u-text-6 {
-  margin: 20px 7px 0;
+  margin: 20px 0 0;
 }
 
 .u-section-3 .u-btn-3 {
@@ -492,10 +507,10 @@
   letter-spacing: 1px;
   border-style: solid;
   text-transform: uppercase;
-  background-image: none;
   font-weight: 700;
-  margin: 20px auto 0 7px;
-  padding: 8px 19px 8px 18px;
+  background-image: none;
+  margin: 20px auto 0 0;
+  padding: 2px 20px 2px 18px;
 }
 
 @media (max-width: 1199px) {
@@ -509,31 +524,16 @@
     min-height: 309px;
   }
 
-  .u-section-3 .u-text-2 {
-    margin-left: 0;
-    margin-right: 0;
+  .u-section-3 .u-image-1 {
+    height: 221px;
   }
 
-  .u-section-3 .u-btn-1 {
-    margin-left: 0;
+  .u-section-3 .u-image-2 {
+    height: 221px;
   }
 
-  .u-section-3 .u-text-4 {
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-3 .u-btn-2 {
-    margin-left: 0;
-  }
-
-  .u-section-3 .u-text-6 {
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-3 .u-btn-3 {
-    margin-left: 0;
+  .u-section-3 .u-image-3 {
+    height: 221px;
   }
 }
 
@@ -541,6 +541,18 @@
   .u-section-3 .u-repeater-1 {
     grid-template-columns: repeat(2, 50%);
     min-height: 710px;
+  }
+
+  .u-section-3 .u-image-1 {
+    height: 262px;
+  }
+
+  .u-section-3 .u-image-2 {
+    height: 262px;
+  }
+
+  .u-section-3 .u-image-3 {
+    height: 262px;
   }
 }
 
@@ -554,14 +566,40 @@
     padding-right: 10px;
   }
 
+  .u-section-3 .u-image-1 {
+    height: 454px;
+  }
+
   .u-section-3 .u-container-layout-2 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
+  .u-section-3 .u-image-2 {
+    height: 454px;
+  }
+
   .u-section-3 .u-container-layout-3 {
     padding-left: 10px;
     padding-right: 10px;
+  }
+
+  .u-section-3 .u-image-3 {
+    height: 454px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-3 .u-image-1 {
+    height: 279px;
+  }
+
+  .u-section-3 .u-image-2 {
+    height: 279px;
+  }
+
+  .u-section-3 .u-image-3 {
+    height: 279px;
   }
 }.u-section-4 .u-sheet-1 {
   min-height: 552px;
@@ -579,22 +617,21 @@
 }
 
 .u-section-4 .u-container-layout-1 {
-  padding: 20px 30px;
+  padding: 20px 23px;
 }
 
 .u-section-4 .u-image-1 {
-  height: 463px;
-  margin-top: 0;
-  margin-bottom: 0;
+  height: 250px;
+  width: 320px;
+  margin: 7px 0 0 auto;
 }
 
 .u-section-4 .u-text-1 {
-  font-weight: 700;
-  margin: 20px auto 0 0;
+  margin: 13px auto 0 7px;
 }
 
 .u-section-4 .u-text-2 {
-  margin: 20px 0 0;
+  margin: 20px 7px 0;
 }
 
 .u-section-4 .u-btn-1 {
@@ -604,27 +641,26 @@
   text-transform: uppercase;
   background-image: none;
   font-weight: 700;
-  margin: 20px auto 0 0;
-  padding: 1px 13px 3px 11px;
+  margin: 20px auto 0 7px;
+  padding: 8px 19px 8px 18px;
 }
 
 .u-section-4 .u-container-layout-2 {
-  padding: 20px 30px;
+  padding: 20px 23px;
 }
 
 .u-section-4 .u-image-2 {
-  height: 463px;
-  margin-top: 0;
-  margin-bottom: 0;
+  height: 250px;
+  width: 320px;
+  margin: 7px 0 0 auto;
 }
 
 .u-section-4 .u-text-3 {
-  font-weight: 700;
-  margin: 20px auto 0 0;
+  margin: 13px auto 0 7px;
 }
 
 .u-section-4 .u-text-4 {
-  margin: 20px 0 0;
+  margin: 20px 7px 0;
 }
 
 .u-section-4 .u-btn-2 {
@@ -634,27 +670,26 @@
   text-transform: uppercase;
   background-image: none;
   font-weight: 700;
-  margin: 20px auto 0 0;
-  padding: 1px 13px 3px 11px;
+  margin: 20px auto 0 7px;
+  padding: 8px 19px 8px 18px;
 }
 
 .u-section-4 .u-container-layout-3 {
-  padding: 20px 30px;
+  padding: 20px 23px;
 }
 
 .u-section-4 .u-image-3 {
-  height: 463px;
-  margin-top: 0;
-  margin-bottom: 0;
+  height: 250px;
+  width: 320px;
+  margin: 7px 0 0 auto;
 }
 
 .u-section-4 .u-text-5 {
-  font-weight: 700;
-  margin: 20px auto 0 0;
+  margin: 13px auto 0 7px;
 }
 
 .u-section-4 .u-text-6 {
-  margin: 20px 0 0;
+  margin: 20px 7px 0;
 }
 
 .u-section-4 .u-btn-3 {
@@ -664,8 +699,8 @@
   text-transform: uppercase;
   background-image: none;
   font-weight: 700;
-  margin: 20px auto 0 0;
-  padding: 1px 13px 3px 11px;
+  margin: 20px auto 0 7px;
+  padding: 8px 19px 8px 18px;
 }
 
 @media (max-width: 1199px) {
@@ -679,16 +714,31 @@
     min-height: 309px;
   }
 
-  .u-section-4 .u-image-1 {
-    height: 367px;
+  .u-section-4 .u-text-2 {
+    margin-left: 0;
+    margin-right: 0;
   }
 
-  .u-section-4 .u-image-2 {
-    height: 367px;
+  .u-section-4 .u-btn-1 {
+    margin-left: 0;
   }
 
-  .u-section-4 .u-image-3 {
-    height: 367px;
+  .u-section-4 .u-text-4 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-4 .u-btn-2 {
+    margin-left: 0;
+  }
+
+  .u-section-4 .u-text-6 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-4 .u-btn-3 {
+    margin-left: 0;
   }
 }
 
@@ -696,18 +746,6 @@
   .u-section-4 .u-repeater-1 {
     grid-template-columns: repeat(2, 50%);
     min-height: 710px;
-  }
-
-  .u-section-4 .u-image-1 {
-    height: 435px;
-  }
-
-  .u-section-4 .u-image-2 {
-    height: 435px;
-  }
-
-  .u-section-4 .u-image-3 {
-    height: 435px;
   }
 }
 
@@ -721,39 +759,497 @@
     padding-right: 10px;
   }
 
-  .u-section-4 .u-image-1 {
-    height: 754px;
-  }
-
   .u-section-4 .u-container-layout-2 {
     padding-left: 10px;
     padding-right: 10px;
-  }
-
-  .u-section-4 .u-image-2 {
-    height: 754px;
   }
 
   .u-section-4 .u-container-layout-3 {
     padding-left: 10px;
     padding-right: 10px;
   }
+}.u-section-5 .u-sheet-1 {
+  min-height: 552px;
+}
 
-  .u-section-4 .u-image-3 {
+.u-section-5 .u-list-1 {
+  grid-template-rows: auto;
+  margin: 50px 0;
+}
+
+.u-section-5 .u-repeater-1 {
+  grid-template-columns: repeat(3, 33.3333%);
+  min-height: 375px;
+  grid-gap: 0px;
+}
+
+.u-section-5 .u-container-layout-1 {
+  padding: 20px 30px;
+}
+
+.u-section-5 .u-image-1 {
+  height: 463px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-5 .u-text-1 {
+  font-weight: 700;
+  margin: 20px auto 0 0;
+}
+
+.u-section-5 .u-text-2 {
+  margin: 20px 0 0;
+}
+
+.u-section-5 .u-btn-1 {
+  font-size: 1rem;
+  letter-spacing: 1px;
+  border-style: solid;
+  text-transform: uppercase;
+  background-image: none;
+  font-weight: 700;
+  margin: 20px auto 0 0;
+  padding: 1px 13px 3px 11px;
+}
+
+.u-section-5 .u-container-layout-2 {
+  padding: 20px 30px;
+}
+
+.u-section-5 .u-image-2 {
+  height: 463px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-5 .u-text-3 {
+  font-weight: 700;
+  margin: 20px auto 0 0;
+}
+
+.u-section-5 .u-text-4 {
+  margin: 20px 0 0;
+}
+
+.u-section-5 .u-btn-2 {
+  font-size: 1rem;
+  letter-spacing: 1px;
+  border-style: solid;
+  text-transform: uppercase;
+  background-image: none;
+  font-weight: 700;
+  margin: 20px auto 0 0;
+  padding: 1px 13px 3px 11px;
+}
+
+.u-section-5 .u-container-layout-3 {
+  padding: 20px 30px;
+}
+
+.u-section-5 .u-image-3 {
+  height: 463px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-5 .u-text-5 {
+  font-weight: 700;
+  margin: 20px auto 0 0;
+}
+
+.u-section-5 .u-text-6 {
+  margin: 20px 0 0;
+}
+
+.u-section-5 .u-btn-3 {
+  font-size: 1rem;
+  letter-spacing: 1px;
+  border-style: solid;
+  text-transform: uppercase;
+  background-image: none;
+  font-weight: 700;
+  margin: 20px auto 0 0;
+  padding: 1px 13px 3px 11px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-5 .u-list-1 {
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-5 .u-repeater-1 {
+    grid-template-columns: repeat(3, 33.333333333333336%);
+    min-height: 309px;
+  }
+
+  .u-section-5 .u-image-1 {
+    height: 367px;
+  }
+
+  .u-section-5 .u-image-2 {
+    height: 367px;
+  }
+
+  .u-section-5 .u-image-3 {
+    height: 367px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-5 .u-repeater-1 {
+    grid-template-columns: repeat(2, 50%);
+    min-height: 710px;
+  }
+
+  .u-section-5 .u-image-1 {
+    height: 435px;
+  }
+
+  .u-section-5 .u-image-2 {
+    height: 435px;
+  }
+
+  .u-section-5 .u-image-3 {
+    height: 435px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-5 .u-repeater-1 {
+    grid-template-columns: 100%;
+  }
+
+  .u-section-5 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-5 .u-image-1 {
+    height: 754px;
+  }
+
+  .u-section-5 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-5 .u-image-2 {
+    height: 754px;
+  }
+
+  .u-section-5 .u-container-layout-3 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-5 .u-image-3 {
     height: 754px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-4 .u-image-1 {
+  .u-section-5 .u-image-1 {
     height: 464px;
   }
 
-  .u-section-4 .u-image-2 {
+  .u-section-5 .u-image-2 {
     height: 464px;
   }
 
-  .u-section-4 .u-image-3 {
+  .u-section-5 .u-image-3 {
     height: 464px;
+  }
+}.u-section-6 .u-sheet-1 {
+  min-height: 689px;
+}
+
+.u-section-6 .u-list-1 {
+  grid-template-rows: auto;
+  margin-top: 43px;
+  margin-bottom: 60px;
+}
+
+.u-section-6 .u-repeater-1 {
+  grid-template-columns: 33.3333% 33.3333% 33.3333%;
+  min-height: 453px;
+  grid-gap: 0px 0px;
+}
+
+.u-section-6 .u-container-layout-1 {
+  padding: 20px 10px;
+}
+
+.u-section-6 .u-image-1 {
+  height: 366px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-6 .u-text-1 {
+  margin: 52px auto 0 36px;
+}
+
+.u-section-6 .u-text-2 {
+  margin: 18px 20px 0;
+}
+
+.u-section-6 .u-btn-1 {
+  font-size: 1rem;
+  letter-spacing: 1px;
+  border-style: none;
+  text-transform: uppercase;
+  font-weight: 700;
+  background-image: none;
+  margin: 11px auto 0;
+  padding: 5px 7px;
+}
+
+.u-section-6 .u-container-layout-2 {
+  padding: 20px 10px;
+}
+
+.u-section-6 .u-image-2 {
+  height: 366px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-6 .u-text-3 {
+  margin: 52px auto 0 36px;
+}
+
+.u-section-6 .u-text-4 {
+  margin: 18px 20px 0;
+}
+
+.u-section-6 .u-btn-2 {
+  font-size: 1rem;
+  letter-spacing: 1px;
+  border-style: none;
+  text-transform: uppercase;
+  font-weight: 700;
+  background-image: none;
+  margin: 11px auto 0;
+  padding: 5px 7px;
+}
+
+.u-section-6 .u-container-layout-3 {
+  padding: 20px 10px;
+}
+
+.u-section-6 .u-image-3 {
+  height: 366px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-6 .u-text-5 {
+  margin: 52px auto 0 36px;
+}
+
+.u-section-6 .u-text-6 {
+  margin: 18px 20px 0;
+}
+
+.u-section-6 .u-btn-3 {
+  font-size: 1rem;
+  letter-spacing: 1px;
+  border-style: none;
+  text-transform: uppercase;
+  font-weight: 700;
+  background-image: none;
+  margin: 11px auto 0;
+  padding: 5px 7px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-6 .u-repeater-1 {
+    grid-template-columns: repeat(3, 33.333333333333336%);
+    min-height: 374px;
+  }
+
+  .u-section-6 .u-image-1 {
+    height: 298px;
+  }
+
+  .u-section-6 .u-text-2 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-6 .u-image-2 {
+    height: 298px;
+  }
+
+  .u-section-6 .u-text-4 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-6 .u-image-3 {
+    height: 298px;
+  }
+
+  .u-section-6 .u-text-6 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-6 .u-repeater-1 {
+    grid-template-columns: repeat(2, 50%);
+    min-height: 859px;
+  }
+
+  .u-section-6 .u-image-1 {
+    height: 345px;
+  }
+
+  .u-section-6 .u-text-1 {
+    width: auto;
+    margin-top: 62px;
+    margin-left: 33px;
+  }
+
+  .u-section-6 .u-text-2 {
+    width: auto;
+    margin-top: 16px;
+  }
+
+  .u-section-6 .u-btn-1 {
+    margin-top: 16px;
+    margin-left: 103px;
+  }
+
+  .u-section-6 .u-image-2 {
+    height: 345px;
+  }
+
+  .u-section-6 .u-text-3 {
+    width: auto;
+    margin-top: 62px;
+    margin-left: 33px;
+  }
+
+  .u-section-6 .u-text-4 {
+    width: auto;
+    margin-top: 16px;
+  }
+
+  .u-section-6 .u-btn-2 {
+    margin-top: 16px;
+    margin-left: 103px;
+  }
+
+  .u-section-6 .u-image-3 {
+    height: 345px;
+  }
+
+  .u-section-6 .u-text-5 {
+    width: auto;
+    margin-top: 62px;
+    margin-left: 33px;
+  }
+
+  .u-section-6 .u-text-6 {
+    width: auto;
+    margin-top: 16px;
+  }
+
+  .u-section-6 .u-btn-3 {
+    margin-top: 16px;
+    margin-left: 103px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-6 .u-repeater-1 {
+    grid-template-columns: 100%;
+  }
+
+  .u-section-6 .u-image-1 {
+    height: 528px;
+  }
+
+  .u-section-6 .u-btn-1 {
+    margin-top: 9px;
+    margin-left: 43px;
+  }
+
+  .u-section-6 .u-image-2 {
+    height: 528px;
+  }
+
+  .u-section-6 .u-btn-2 {
+    margin-top: 9px;
+    margin-left: 43px;
+  }
+
+  .u-section-6 .u-image-3 {
+    height: 528px;
+  }
+
+  .u-section-6 .u-btn-3 {
+    margin-top: 9px;
+    margin-left: 43px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-6 .u-image-1 {
+    height: 307px;
+  }
+
+  .u-section-6 .u-text-1 {
+    margin-top: 60px;
+    margin-left: 7px;
+  }
+
+  .u-section-6 .u-text-2 {
+    margin-top: 29px;
+  }
+
+  .u-section-6 .u-btn-1 {
+    margin-top: 29px;
+    margin-left: 0;
+  }
+
+  .u-section-6 .u-image-2 {
+    height: 307px;
+  }
+
+  .u-section-6 .u-text-3 {
+    margin-top: 60px;
+    margin-left: 7px;
+  }
+
+  .u-section-6 .u-text-4 {
+    margin-top: 29px;
+  }
+
+  .u-section-6 .u-btn-2 {
+    margin-top: 29px;
+    margin-left: 0;
+  }
+
+  .u-section-6 .u-image-3 {
+    height: 307px;
+  }
+
+  .u-section-6 .u-text-5 {
+    margin-top: 60px;
+    margin-left: 7px;
+  }
+
+  .u-section-6 .u-text-6 {
+    margin-top: 29px;
+  }
+
+  .u-section-6 .u-btn-3 {
+    margin-top: 29px;
+    margin-left: 0;
   }
 }
